adding support for role based authentication, adding authentication controller and jwt security filter
